# lol_analysis_tool

./: .gitignore  README.md  pyproject.toml
lol_analysis_tool/: main.py
lol_analysis_tool/data/: GameData.py  Participants.py  gamedata.py  participants.py
lol_analysis_tool/data/files/: champion.json  queues_active.json
lol_analysis_tool/endpoints/: DatabaseEndpoint.py  WebEndpoint.py  mongodb_endpoint.py  mysql_endpoint.py  riot_endpoint.py  tables.py
